tests/paczka2/big_fuzzy/63320529.err
Error in line 6: 91rAfc S660 69,7
Error in line 26: uEuR0O06Zn4 S2 1,1
Error in line 29: 91rAfc A749 -1,6
Error in line 28: uEuR0O06Zn4 S660 64,8
Error in line 31: uEuR0O06Zn4 A783 87,5
Error in line 39: P5iciq2 S660 77,1
Error in line 44: uEuR0O06Zn4 S2 95,4
Error in line 41: 91rAfc S660 42,9
Error in line 48: P5iciq2 S2 57,6
Error in line 53: uEuR0O06Zn4 S660 21,9
Error in line 51: v5waRo S2 88,2
Error in line 71: v5waRo A783 55,74
Error in line 66: v5waRo A783 28,0
Error in line 81: S660 A!83 !,3
Error in line 91: uEuR0O06Zn4 A749 80,0
Error in line 107: v5waRo S2 90,3
Error in line 109: v5waRo A749 77,3
Error in line 115: v5waRo S660 3,5
Error in line 117: S660 S660 282,7
Error in line 114: nQp9j A749 75,1
Error in line 113: P5iciq2 A749 55,9
Error in line 127: S660 A749 83,1
Error in line 136: S660 S660 -1,9
Error in line 131: S660 S660 2,1
Error in line 124: 91rAfc A749 70,6
Error in line 133: nQp9j S660 67,1
Error in line 140: nQp9j A783 74,7
Error in line 137: hJj A783 80,7
Error in line 138: S660 A783 92,1
Error in line 145: S660 A749 47,0
Error in line 158: 91rAfc A749 2,8
Error in line 173: nQp9j P749 95,0
Error in line 169: nQp9j A749 37,1
Error in line 183: nQp9j A783 82,2
Error in line 194: v5waRo A783 25,9
Error in line 197: nQp9j S660 27,5
Error in line 212: uEuR0O06Zn4 A783 349,2
Error in line 218: uEuR0O06Zn4 S660 75,3
Error in line 210: hJj A749 88,8
Error in line 227: 91rAfc A783 87,3
Error in line 228: 91rAfc S2 92,4
Error in line 232: hJj S660 77,0
Error in line 239: nQp9j S2 72,6
